# printer-interface-to-shortcuts

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  build.rs  docker-compose.yaml  launch.sh  launch2.sh  printer-actions.service  readme.md
src/: data_defs.rs  filaments.rs  http_errors.rs  interface_data_defs.rs  job_checker.rs  lib.rs  main.rs  printer_service.rs  printer_trait.rs  time_utils.rs
src/remote/: error_util.rs  mod.rs  notify_homebridge.rs  printer_service.rs
src/traits/: mod.rs  notify_trait.rs
src/utils/: http_errors.rs  job_running.rs  logging_util.rs  mod.rs  retry_on_fail.rs  time_utils.rs
