[package]
name = "printer-actions"
version = "0.1.0"
edition = "2021"
default-run = "printer-actions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4.31"

[dependencies]
actix-web = { version = "4.3.1", features = [] }
anyhow = { version = "1.0.74", features = ["backtrace"] }
async-trait = "0.1.73"
dotenv = "0.15.0"
log = { version = "0.4.20", features = ["std"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
simple_logger = { version = "4.2.0", features = [] }
thiserror = "1.0.46"
tokio = { version = "1.32.0", features = ["full"] }
